--- a/css/style.less
+++ b/css/style.less
@@ -3,6 +3,7 @@ body, html{
   margin: 0;
   font-family: 'lato', sans-serif;
 }
+
 .navbar-inverse{
   border-radius: 0;
 }
@@ -47,6 +48,52 @@ body, html{
   padding: 10px 0px 10px 25px;
 }
 
+*{
+  //border: 1px solid red;
+}
 .login-title{
   .register-title;
+}
+.body-content__header{
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  background-color: #f6f6f6;
+  .title{
+    font-size: 2em;
+    float: left;
+  }
+  span{
+    float: right;
+  }
+}
+
+.sidebar{
+  background-color: #f6f6f6;
+  ul{
+    list-style: none;
+    line-height: 1.5;
+    cursor: pointer;
+    li:before{
+      content: '';
+      display: inline-block;
+      height: 20px;
+      width: 20px;
+      position: relative;
+      top: 5px;
+      background-size: cover;
+      background-image: url(../images/listbullet.png);
+    }
+  }
+}
+
+*{
+  //border: 1px solid green;
+}
+.brand{
+  width: 300px;
+  display: block;
+  margin: auto;
+  font-family: 'Kaushan Script', cursive;
+  font-size: 3em;
 }
